tests/compile-fail/Rule_7_4.rs
fn main() {
    let mut literal = "string literal";
    //~^ ERROR Non-compliant - string literal not const-qualified.
}
